deployment-worker.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: worker-app
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
        - name: backend
          image: wombat19/cc-project-worker:latest
          ports:
            - containerPort: 8080  # Adjust the port as needed
