service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-app
  labels:
    run: master-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http 
  selector:
    run: master-app
