ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-app 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: master-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: master-app
            port:
              number: 8080
